--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,3 +20,7 @@ jobs:
           chmod +x gradlew 
           ./gradlew build 
           ls -ltr
+      - name: SonarCloud Analysis
+        run: |
+          chmod +x gradlew 
+          ./gradlew build sonar -Dsonar.token=${{ secrets.TOKEN_SONARCLOUD }} 
