--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,12 @@ group = 'org.springframework.samples'
 version = '2.6.0'
 sourceCompatibility = '11'
 
+repositories {
+  mavenCentral()
+}
+
+ext.webjarsFontawesomeVersion = "4.7.0"
+ext.webjarsBootstrapVersion = "5.1.3"
 
 sonar {
   properties {
