--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,6 +20,11 @@ jobs:
           chmod +x gradlew 
           ./gradlew build 
           ls -ltr
+      - name: Set up JDK 8 for SonarQube analysis
+        uses: actions/setup-java@v1
+        with:
+          java-version: 8
+          
       - name: SonarCloud Analysis
         run: |
           chmod +x gradlew 
