--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ plugins {
 }
 
 apply plugin: 'java'
-
+group = 'org.springframework.samples'
+version = '2.6.0'
+sourceCompatibility = '11'
 
 
 repositories {
