--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,3 +32,16 @@ jobs:
         run: |
           chmod +x gradlew 
           ./gradlew build sonar -Dsonar.token=${{ secrets.TOKEN_SONARCLOUD }} 
+     
+      - name: Dependency Check
+        uses: dependency-check/Dependency-Check_Action@1.1.0
+        with:
+          project: 'pet-clinic'
+          path: '.'
+          format: 'HTML' 
+      
+      - name: Upload Test results
+        uses: actions/upload-artifact@master
+        with:
+           name: Depcheck report
+           path: ${{github.workspace}}/reports
