--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Dependency Check
         uses: dependency-check/Dependency-Check_Action@1.1.0
         with:
-          project: 'pet-clinic'
+          project: 'final-lab'
           path: '.'
           format: 'HTML' 
       
