--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -67,3 +67,22 @@ jobs:
       - name: Docker Push
         run: |
           docker push ivanpizarroq/final-lab 
+
+  deploy: 
+    runs-on: self-hosted 
+    needs: build
+    steps: 
+
+    - uses: actions/checkout@v3
+    - name: Set PowerShell Execution Policy
+      run: |
+        Set-ExecutionPolicy Unrestricted
+    - name: Docker Login
+      uses: docker/login-action@v2.2.0
+      with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Deploy to Minikube
+      run: |
+        kubectl apply -f deployment.yml
+
