--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -77,12 +77,16 @@ jobs:
     - name: Set PowerShell Execution Policy
       run: |
         Set-ExecutionPolicy Unrestricted
-    - name: Docker Login
-      uses: docker/login-action@v2.2.0
-      with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Deploy to Minikube
+    - name: Despliegue Aplicaion
       run: |
-        kubectl apply -f deployment.yml
+        docker run -p 8085:8085 --name final-lab-deploy -d ivanpizarroq/final-lab:latest
+
+    - name: Sleep
+      run: | 
+        sleep 30
+
+    - name: OWASP ZAP Scan
+      uses: zaproxy/action-baseline@v0.11.0
+      with:
+        target: 'http://localhost:8085/'
 
