--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -89,7 +89,7 @@ jobs:
         sleep 30
 
     - name: OWASP ZAP Scan
-      uses: zaproxy/action-full-scan@v0.9.0
+      uses: zaproxy/action-baseline@v0.11.0
       with:
         target: 'http://localhost:8085/'
 
