--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -82,14 +82,19 @@ jobs:
         sudo docker pull ivanpizarroq/final-lab:latest
     - name: Despliegue Aplicaion
       run: |
-        sudo docker run -p 8085:8085 --name final-lab-deploy -d ivanpizarroq/final-lab:latest
+        sudo docker run -p 8085:8085 --name final-lab-deploy -d ivanpizarroq/final-lab:latest 
 
     - name: Sleep
       run: | 
         sleep 30
 
+    #- name: OWASP ZAP Scan
+     # uses: zaproxy/action-baseline@v0.11.0
+      #with:
+       # target: 'http://localhost:8085/'
+
     - name: OWASP ZAP Scan
-      uses: zaproxy/action-baseline@v0.11.0
-      with:
-        target: 'http://localhost:8085/'
+      run: |
+        sudo docker run -t ghcr.io/zaproxy/zaproxy:stable zap-baseline.py -t http://localhost:8085
+
 
