--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -79,10 +79,10 @@ jobs:
     #    Set-ExecutionPolicy Unrestricted
     - name: Pull de la Imagen Docker
       run: |
-        sudo docker pull ivanpizarroq/final-lab:latest
+        docker pull ivanpizarroq/final-lab:latest
     - name: Despliegue Aplicaion
       run: |
-        sudo docker run -p 8085:8085 --name final-lab-deploy -d ivanpizarroq/final-lab:latest 
+        docker run -p 8085:8085 --name final-lab-deploy -d ivanpizarroq/final-lab:latest 
 
     - name: Sleep
       run: | 
@@ -95,6 +95,6 @@ jobs:
 
     - name: OWASP ZAP Scan
       run: |
-        sudo docker run -t ghcr.io/zaproxy/zaproxy:stable zap-baseline.py -t http://localhost:8085
+        docker run -t ghcr.io/zaproxy/zaproxy:stable zap-baseline.py -t http://localhost:8085
 
 
